--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
+    "simplex-noise": "^4.0.1",
     "tailwind-merge": "^2.2.1",
     "web-vitals": "^2.1.4"
   },
